ele fica reclamando que os arquivos são "non projetct files"

--- a/produtorPortao/pom.xml
+++ b/produtorPortao/pom.xml
@@ -8,11 +8,11 @@
 		<version>3.5.7</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.produtorLuz</groupId>
-	<artifactId>luz</artifactId>
+	<groupId>com.produtorPortao</groupId>
+	<artifactId>area</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>luz</name>
-	<description>Projeto da luz</description>
+	<name>area</name>
+	<description>Produtor do portao</description>
 	<url/>
 	<licenses>
 		<license/>
@@ -38,10 +38,7 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-<dependency>
-    <groupId>org.springframework.boot</groupId>
-    <artifactId>spring-boot-starter-amqp</artifactId>
-</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
