--- a/produtorLuz/src/main/resources/application.properties
+++ b/produtorLuz/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-spring.application.name=luz
+spring.application.name=produtorLuz
 server.port=8081 
 spring.rabbitmq.host=localhost 
 spring.rabbitmq.port=5672  
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest 
-luz.rabbitmq.exchange.name=exchange_principal
-luz.rabbitmq.routing-key=fila.luz
+config.rabbitmq.exchange.name=exchange_principal
+config.rabbitmq.routing-key=fila.luz
