--- a/produtorPortao/src/main/resources/application.properties
+++ b/produtorPortao/src/main/resources/application.properties
@@ -1,13 +1,8 @@
-# Configurações RabbitMQ
-spring.rabbitmq.host=localhost
-spring.rabbitmq.port=5672
+spring.application.name=produtorPortao
+server.port=8081 
+spring.rabbitmq.host=localhost 
+spring.rabbitmq.port=5672  
 spring.rabbitmq.username=guest
-spring.rabbitmq.password=guest
-
-# Configurações específicas do produtor de portão
-config.rabbitmq.queue=portao.command.queue
-config.rabbitmq.routing-key=portao.command.routingkey
-
-# Configurações do Spring Boot
-server.port=8083
-spring.application.name=produtor-portao
+spring.rabbitmq.password=guest 
+config.rabbitmq.exchange.name=exchange_principal
+config.rabbitmq.routing-key=fila.portao
