--- a/coordenador/pom.xml
+++ b/coordenador/pom.xml
@@ -8,11 +8,11 @@
 		<version>3.5.7</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.produtorLuz</groupId>
-	<artifactId>luz</artifactId>
+	<groupId>com.coordenador</groupId>
+	<artifactId>coordenador</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>luz</name>
-	<description>Projeto da luz</description>
+	<name>coordenador</name>
+	<description>Coordenador da Luz, Ar e Portão</description>
 	<url/>
 	<licenses>
 		<license/>
@@ -32,16 +32,17 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-amqp</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-		<dependency>
- 		   <groupId>org.springframework.boot</groupId>
- 		   <artifactId>spring-boot-starter-amqp</artifactId>
-		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
@@ -61,6 +62,11 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.amqp</groupId>
+			<artifactId>spring-rabbit-test</artifactId>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
