--- a/produtorAr/src/main/resources/application.properties
+++ b/produtorAr/src/main/resources/application.properties
@@ -1,7 +1,8 @@
-spring.application.name=ar
-server.port=8082
-spring.rabbitmq.host=localhost
-spring.rabbitmq.port=5672
+spring.application.name=produtorAr
+server.port=8081 
+spring.rabbitmq.host=localhost 
+spring.rabbitmq.port=5672  
 spring.rabbitmq.username=guest
-spring.rabbitmq.password=guest
+spring.rabbitmq.password=guest 
+config.rabbitmq.exchange.name=exchange_principal
 config.rabbitmq.routing-key=fila.ar
